--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
     <!-- <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" /> -->
     <application
+        android:name=".BluetoothConnection"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
