Pracuje z SQL - narazie dodaje i wyswietla pojedyncza kolumne

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".BluetoothMenu"></activity>
+        <activity android:name=".ListDataFromSqlDatabase"></activity>
     </application>
 
 </manifest>
